[workspace]

[package]
name = "rust-completions"
description="Minimal wrapper around OpenAI's Chat Completions"
authors = ["Ticiano Morvan <ticiano.morvan@gmail.com>"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/ticianomorvan/rust-completions"
repository = "https://github.com/ticianomorvan/rust-completions"
keywords = ["open-ai", "chat-gpt", "completions"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }